# src/routes/user/swagger.yml
@@ -11,6 +11,7 @@ definitions:
       - phone
       - userType
       - sex
+      - birth
     properties:
       email:
         type: string
@@ -27,6 +28,9 @@ definitions:
       sex:
         type: string
         description: 성별
+      birth:
+        type: string
+        description: 생년월일
 
   SignUpAuth:
     type: object
@@ -101,8 +105,8 @@ definitions:
             example:
               errorCode:
                 status: 400
-                message: '이메일의 형식에 맞게 입력해주세요. | 비밀번호는 6자 이상 15자 이하의 영문+숫자이어야 합니다. | 핸드폰의 형식에 맞게 입력해주세요. | 유저 타입의 형식에 맞게 입력해주세요.'
-                code: 'SIGNUP002 | SIGNUP003 | SIGNUP004 | SIGNUP006'
+                message: '이메일의 형식에 맞게 입력해주세요. | 비밀번호는 6자 이상 15자 이하의 영문+숫자이어야 합니다. | 핸드폰의 형식에 맞게 입력해주세요. | 유저 타입의 형식에 맞게 입력해주세요. | 생년월일을 제대로 입력해 주세요.'
+                code: 'SIGNUP002 | SIGNUP003 | SIGNUP004 | SIGNUP006 | SIGNUP010'
       401:
         description: 'token이 없거나 유효하지 않음(비정상적 접근)'
         content:
